fixed spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,7 @@ body {
 }
 
 .home-title {
-  flex: .5; /* This makes the title and info take up equal space. Adjust these numbers if you want different proportions */
+  flex: .5; 
 }
 
 .home-info {
@@ -51,8 +51,7 @@ body {
   margin-top: 16rem;
   padding: 8rem;
   text-align: center;
-  flex: .6 /* This makes the title and info take up equal space. Adjust these numbers if you want different proportions */
-}
+  flex: .6 
 
 
 .container {
